finished first revision of chapter 2 and 3

--- a/ProjetodeGraduacao/ProjetoFelipeClaudio/biblio.bib
+++ b/ProjetodeGraduacao/ProjetoFelipeClaudio/biblio.bib
@@ -531,3 +531,47 @@
 	ISSN={0885-8950},
 	month={Feb},
 }
+@ARTICLE{
+	energy_magazine,
+	author={N. {Amjady} and M. {Hemmati}},
+	journal={IEEE Power and Energy Magazine},
+	title={Energy price forecasting - problems and proposals for such predictions},
+	year={2006},
+	volume={4},
+	number={2},
+	pages={20-29},
+	keywords={power markets;power system economics;pricing;energy price forecasting;electricity market;pool system bidding;market participants;price-production schedule;production costs;market clearing price;Load forecasting;Proposals;Electricity supply industry;Pricing;Economic forecasting;Electricity supply industry deregulation;Contracts;Costs;Instruments;Power industry},
+	doi={10.1109/MPAE.2006.1597990},
+	ISSN={1540-7977},
+	month={March},
+}
+@article{
+	hibrid_price_forecasting,
+	title = "Price forecasting of day-ahead electricity markets using a hybrid forecast method",
+	journal = "Energy Conversion and Management",
+	volume = "52",
+	number = "5",
+	pages = "2165 - 2169",
+	year = "2011",
+	issn = "0196-8904",
+	doi = "https://doi.org/10.1016/j.enconman.2010.10.047",
+	url = "http://www.sciencedirect.com/science/article/pii/S0196890410005212",
+	author = "M. Shafie-khah and M. Parsa Moghaddam and M.K. Sheikh-El-Eslami",
+	keywords = "Price forecast, Hybrid forecast method, Wavelet transform (WT), Auto-Regressive Integrated Moving Average (ARIMA), Radial Basis Function Neural Networks (RBFN), Particle Swarm Optimization (PSO)",
+	abstract = "Energy price forecasting in a competitive electricity market is crucial for the market participants in planning their operations and managing their risk, and it is also the key information in the economic optimization of the electric power industry. However, price series usually have a complex behavior due to their nonlinearity, nonstationarity, and time variancy. In this paper, a novel hybrid method to forecast day-ahead electricity price is proposed. This hybrid method is based on wavelet transform, Auto-Regressive Integrated Moving Average (ARIMA) models and Radial Basis Function Neural Networks (RBFN). The wavelet transform provides a set of better-behaved constitutive series than price series for prediction. ARIMA model is used to generate a linear forecast, and then RBFN is developed as a tool for nonlinear pattern recognition to correct the estimation error in wavelet-ARIMA forecast. Particle Swarm Optimization (PSO) is used to optimize the network structure which makes the RBFN be adapted to the specified training set, reducing computation complexity and avoiding overfitting. The proposed method is examined on the electricity market of mainland Spain and the results are compared with some of the most recent price forecast methods. The results show that the proposed hybrid method could provide a considerable improvement for the forecasting accuracy."
+}
+@article{
+	price_forecast_competition,
+	title = "Probabilistic energy forecasting: Global Energy Forecasting Competition 2014 and beyond",
+	journal = "International Journal of Forecasting",
+	volume = "32",
+	number = "3",
+	pages = "896 - 913",
+	year = "2016",
+	issn = "0169-2070",
+	doi = "https://doi.org/10.1016/j.ijforecast.2016.02.001",
+	url = "http://www.sciencedirect.com/science/article/pii/S0169207016000133",
+	author = "Tao Hong and Pierre Pinson and Shu Fan and Hamidreza Zareipour and Alberto Troccoli and Rob J. Hyndman",
+	keywords = "Electric load forecasting, Electricity price forecasting, Wind power forecasting, Solar power forecasting, Probabilistic forecasting, Forecasting competition",
+	abstract = "The energy industry has been going through a significant modernization process over the last decade. Its infrastructure is being upgraded rapidly. The supply, demand and prices are becoming more volatile and less predictable than ever before. Even its business model is being challenged fundamentally. In this competitive and dynamic environment, many decision-making processes rely on probabilistic forecasts to quantify the uncertain future. Although most of the papers in the energy forecasting literature focus on point or single-valued forecasts, the research interest in probabilistic energy forecasting research has taken off rapidly in recent years. In this paper, we summarize the recent research progress on probabilistic energy forecasting. A major portion of the paper is devoted to introducing the Global Energy Forecasting Competition 2014 (GEFCom2014), a probabilistic energy forecasting competition with four tracks on load, price, wind and solar forecasting, which attracted 581 participants from 61 countries. We conclude the paper with 12 predictions for the next decade of energy forecasting."
+}
