--- a/ProjetodeGraduacao/ProjetoFelipeClaudio/cap2.tex
+++ b/ProjetodeGraduacao/ProjetoFelipeClaudio/cap2.tex
@@ -1,11 +1,11 @@
-\paragraph{}No começo da década de 90 a estrutura do setor elétrico brasileiro era verticalizada, composta por grandes estatais que tinham o controle sobre toda a cadeia produtiva (geração, transmissão e distribuição). Houve então uma reestruturação do setor (RE-SEB), baseado no princípio de que "a eficiência no setor elétrico será assegurada através da competição, onde possível, e da regulamentação, onde necessária"\cite{AlteracaoModeloComercializacao}. Sendo assim, o mercado foi aberto para o setor privado. O SEB foi então divido em empresas de geração, transmissão, distribuição e comercialização de energia. Muitas empresas públicas foram leiloadas, dentre elas a a Light (21/05/1196) e a CERJ(20/11//1996)\cite{EvolucaoSetorEletrico}.
+\paragraph{}No começo da década de 90 a estrutura do setor elétrico brasileiro era verticalizada, composta por grandes estatais que tinham o controle sobre toda a cadeia produtiva (geração, transmissão e distribuição). Houve então uma reestruturação do setor (RE-SEB), baseado no princípio de que "a eficiência no setor elétrico será assegurada através da competição, onde possível, e da regulamentação, onde necessária" \cite{AlteracaoModeloComercializacao}. Sendo assim, o mercado foi aberto para o setor privado. O SEB foi então divido em empresas de geração, transmissão, distribuição e comercialização de energia. Muitas empresas públicas foram leiloadas, dentre elas a a Light (21/05/1196) e a CERJ(20/11//1996) \cite{EvolucaoSetorEletrico}.
 
-\paragraph{}Assim como mencionado, um dos pilares do RE-SEB foi a regulamentação. Sendo assim, em 1996 foi criada a Agência Nacional de Energia Elétrica - ANEEL, a qual tinha como função regular e fiscalizar a produção, transmissão, distribuição e comercialização de energia elétrica segundo as diretrizes definidas pelo governo federal.
+\paragraph{}Assim como mencionado, um dos pilares do RE-SEB foi a regulamentação. Então em 1996 foi criada a Agência Nacional de Energia Elétrica - ANEEL, a qual tinha como função regular e fiscalizar a produção, transmissão, distribuição e comercialização de energia elétrica segundo as diretrizes definidas pelo governo federal.
 
 \paragraph{}Foram aprovadas medidas que incentivavam a realização de contratos de longo prazo entre distribuidores e geradores
 \cite{EvolucaoSetorEletrico}. Além disso, foi dado livre acesso aos pequenos produtores (potenciais hidráulicos menores que 1MW e usinas termoelétricas com potencial inferior a 5MW)  ao sistemas de transmissão e distribuição das concessionárias e permissionárias do serviço publico. Isto facilitou o aparecimento de novas fontes de energias e novos produtores no SEB.
 
-\paragraph{}Em 2001 houve uma grande crise energética no país que foi fruto de um período seco. Então, mudanças estruturais foram implantadas no SEB buscando assim melhorar a gestão, evitar incidentes, garantir a qualidade e incentivar a expansão do sistema. Com isso, a organização da estrutura foi modificada, sendo que as instituições responsáveis pelo pleno funcionamento deste modelo são descritas a seguir:\cite{CCEE}:
+\paragraph{}Em 2001 houve uma grande crise energética no país que foi fruto de um período seco. Então, mudanças estruturais foram implantadas no SEB buscando assim melhorar a gestão, evitar incidentes, garantir a qualidade e incentivar a expansão do sistema. Com isso, a organização da estrutura foi modificada, sendo que as instituições responsáveis pelo pleno funcionamento deste modelo são descritas a seguir \cite{CCEE}:
 
 \begin{itemize}
 	\item { \textbf{Ministério de Minas e Energias - MME}: Reponsável pela formulação e implantação de políticas relacionadas ao setor elétrico.}
@@ -20,7 +20,7 @@
 	
 	\item{\textbf{Operador Nacional do Sistema Elétrico - ONS}: Tem como objetivo a coordenação e controle da instalações de geração e transmissão de energia elétrica no Brasil, buscando garantir a todos os agentes o livre acesso à rede de transmissão, o menor custo de expansão do sistema e as melhores condições operacionais futuras \cite{ONS}}
 	
-	\item{\textbf{Empresa de Pesquisa Energética - EPE}: Realiza pesquisas em áreas relacionadas com energia elétrica, petróleo, gás biocombustíveis e planejamento energético\cite{EPE}.}
+	\item{\textbf{Empresa de Pesquisa Energética - EPE}: Realiza pesquisas em áreas relacionadas com energia elétrica, petróleo, gás biocombustíveis e planejamento energético \cite{EPE}.}
 	
 	\begin{figure}[H]
 		\centering
@@ -30,16 +30,16 @@
 \end{itemize} 
 
 
-\paragraph{}Outra medida tomada para facilitar o gerenciamento de toda a rede de geração, transmissão, e consumo de energia elétrica foi dividir o Sistema Interligado Nacional - SIN\cite{ONS} em quatro subsistemas sendo estes: Norte, Nordeste, Sudeste/Centro-Oeste e Sul. Vale ressaltar que existe conexão entre as partes, de forma que um subsistema pode auxiliar o suprimento da demanda de energia de outro em períodos de seca. Participam desse sistema diversos agentes\cite{CCEE}, sendo eles: 
+\paragraph{}Outra medida tomada para facilitar o gerenciamento de toda a rede de geração, transmissão, e consumo de energia elétrica foi dividir o Sistema Interligado Nacional - SIN \cite{ONS} em quatro subsistemas sendo estes: Norte, Nordeste, Sudeste/Centro-Oeste e Sul. Vale ressaltar que existe conexão entre as partes, de forma que um subsistema pode auxiliar o suprimento da demanda de energia de outro em períodos de seca. Participam desse sistema diversos agentes \cite{CCEE}, sendo eles: 
 
 \begin{itemize}
 	\item{\textbf{Agentes geradores}: são agentes autorizados a gerar energia elétrica para o sistema.}
 	
-	\item{\textbf{Agentes de transmissão}: são agentes que detem o meios de transmissão de energia.}
+	\item{\textbf{Agentes de transmissão}: são agentes que detêm o meios de transmissão de energia.}
 	
 	\item{\textbf{Agentes de distribuição}: são agentes autorizados a distribuir energia contratada dos serviços de transmissão em uma área definida pela concessão}
 	
-	\item{\textbf{Consumidores livres}: são consumidores que tem a opção de escolher o distribuidor de energia, diferente do que acontece no consumo doméstico.}
+	\item{\textbf{Consumidores livres}: são consumidores que têm a opção de escolher o distribuidor de energia, diferente do que acontece no consumo doméstico.}
 	
 	\item{\textbf{Agentes importadores}: são agentes titulares de autorização expedida pela ANEEL para exercer as atividades de importação de energia elétrica.}
 	
@@ -75,7 +75,7 @@
 	
 	\begin{center}
 		
-		\caption{Critérios vigentes para se tornar consumidor Livre \cite{CCEE}.}
+		\caption{Critérios vigentes para se tor consumidor Livre \cite{CCEE}.}
 		
 		\begin{tabular}{|c|c|c|}\hline
 			
@@ -152,7 +152,7 @@ O grande desafio do setor é utilizar a energia de maneira eficiente, reduzindo o
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=1\linewidth]{PLD_media_mensal_SE.jpg}
-	\caption[\small{Instituições do setor elétrico brasileiro \cite{CCEE}.}]{\label{PLDMensal} \small{Instituições do setor elétrico brasileiro. Fonte: CCEE \cite{CCEE}.}}
+	\caption[\small{Instituições do setor elétrico brasileiro \cite{CCEE}.}]{\label{PLDMensal} \small{PLD mensal. Fonte: CCEE \cite{CCEE}.}}
 \end{figure}
 
 \paragraph{}No gráfico acima observa-se que existem pontos onde o SIN foi afetado por crises, fazendo com que o PLD aumentasse abruptamente. No ano de 2007 ocorreu a primeira mostrada no gráfico. O SEB tinha passado por uma recente reestruturação da organização, a qual não foi suficiente para evitar o acontecimento. Durante o período de racionamento (2001/06 - 2002/02) a demanda foi menor do que a oferta, porém com o passar do anos ela voltou a se aproximar da curva de oferta. Após abril de 2005, houve um período sem investimento na capacidade energética sistema. Junto com esse fato, ocorreu um período de baixa afluência nas usinas hidrelétricas.
@@ -296,7 +296,7 @@ cálculo do PLD é feito com base no CMO obtido do programa DECOMP, o qual é dispo
 	\label{fig:PrevisaoDiretaPLDUFOP}	
 \end{figure}
 
-\paragraph{}Outras abordagens são vistas em \cite{PrevisaoMultiPassos}, onde é proposto um modelo híbrido com a utilização de modelo autorregressivo de média móvel integrada sazonal - SARIMA, análise de componentes principais e redes neurais, conforme a figura a seguir:
+\paragraph{}Outras abordagens são vistas em \cite{PrevisaoMultiPassos}, onde é proposto um modelo híbrido com a utilização de \textit{Autoregressive Integrated Moving Average} - ARIMA, análise de componentes principais e redes neurais, conforme a figura a seguir:
 
 \begin{figure}[H]
 	\centering
@@ -338,7 +338,7 @@ cálculo do PLD é feito com base no CMO obtido do programa DECOMP, o qual é dispo
 
 \paragraph{}Em ambos o casos acima o autor realiza previsões para um período de 12 semanas à frente.
 
-\paragraph{}No trabalho visto em \cite{RNA_DIRETA_E_RECORRENTE}, , têm se a análise das variáveis utilizadas na entrada de cada submercado através da correlação. Além é feita a comparação entre os resultados obtidos pelo modelo ARIMA, rede neura recorrente, rede neural direta sem seleção de lags e com a seleção de lags. Já em \cite{RNA_PRECO_SPOT} foram utilizadas como variáveis de entrada a geração das hidroelétricas, térmicas e eólica, além da Energia Natural Afluente - ENA, ENA máxima, EAR - Energia Armazenada e o PLD para cada um dos patamares nas 4 últimas semanas, utilizando uma rede neural com 3 neurônios na camada interna. Com métrica utilizada, faz-se um plot do alvo pelo resultado previsto pela rede e então é feito uma ajuste linear. No caso ideal a equação $y = a\cdot x + b$ se torna $y = x$ (previsão perfeita) para a previsão em um horizonte de até 6 semanas. Em \cite{TCC_FABIANE} utiliza-se uma rede neural recorrente para obter previsões em um horizonte de até seis meses a frente.
+\paragraph{}No trabalho visto em \cite{RNA_DIRETA_E_RECORRENTE}, , têm se a análise das variáveis utilizadas na entrada de cada submercado através da correlação. Além é feita a comparação entre os resultados obtidos pelo modelo ARIMA, rede neurais recorrentes, rede neural direta sem seleção de lags e com a seleção de lags. Já em \cite{RNA_PRECO_SPOT} foram utilizadas como variáveis de entrada a geração das hidroelétricas, térmicas e eólica, além da Energia Natural Afluente - ENA, ENA máxima, EAR - Energia Armazenada e o PLD para cada um dos patamares nas 4 últimas semanas, utilizando uma rede neural com 3 camadas ocultas. Como métrica de avaliação dos resultados, faz-se um plot do alvo pelo resultado previsto pela rede e então é feito uma ajuste linear. No caso ideal a equação $y = a\cdot x + b$ se torna $y = x$ (previsão perfeita). Os preços são previstos em um horizonte de até 6 semanas. Em \cite{TCC_FABIANE} utiliza-se uma rede neural recorrente para obter previsões em um horizonte de até seis meses a frente.
 
 \paragraph{}Outra abordagem diferente das observadas acima é a vista em \cite{GARCH_PLD}, onde o autor utiliza modelos \textit{Genralized Auto-Regressive Conditional Heteroscedasticity}- GARCH para a previsão do PLD. Para a estimação dos parâmetros foram utilizadas análises com base na funçao de autocorreções - ACF, autocorrelações parciais - PACF, função de verossimilhança (LLF) e testes estatísticos como o \textit{Akaike info criterion} - AIC.
 
@@ -352,7 +352,8 @@ cálculo do PLD é feito com base no CMO obtido do programa DECOMP, o qual é dispo
 
 \paragraph{}Em \cite{simple_forecast} são mostradas algumas abordagem simples para o problema de previsão do preço \textit{spot} (PLD é um exemplo de preço \textit{spot}) no mercado de energia de Ontário. Foi utilizada uma rede neural com uma camada escondida, uma rede neural misturada com lógica fuzzy e otimização com o algoritmo IMO. A previsão foi feita hora a hora para um período de 24 horas. Concluiu-se que a rede neural com lógica fuzzy obteve o melhor resultado, além disso a relevância das entradas para a previsão foi analisada e viu-se que as entradas mais relevantes eram a demanda e a interrupção do gerador. 
 
+\paragraph{}A revista \cite{energy_magazine} traz a revisão de alguns resultados obtidos na previsão dos preços de mercados de energia elétrica como o da Noruega, Espanha e Califórnia. São utilizadas algumas abordagem lineares como AR, ARIMA e GARCH. Além disso são exibidos resultados de abordagens não lineares utilizando redes neurais. Alguns variantes mostrados são: RNA com lógica fuzzy, com filtro de Kalman extendido e com transformada de Fourier e Hartley como filtro para os preços. O paper \cite{price_forecast_competition} mostra os resultados para a a competição de global de previsão de energia, a qual ocorreu em 2014. São mostrados resultados tanto para previsão de preços da energia elétrica, carga de energia, energia eólica e solar.
 
-\paragraph{}
-
+\paragraph{}Em \cite{hibrid_price_forecasting} foi utilizada uma abordagem híbrida, onde o modelo wavelet-ARIMA seria responsável por prever a parte linear e a parte composta pelo modelo \textit{Radial Basis Function Network} - RBFN seria responsável por corrigir o erro residual proveniente da primeira parte.
+ 
 
