--- a/ProjetodeGraduacao/ProjetoFelipeClaudio/Preambulo.tex
+++ b/ProjetodeGraduacao/ProjetoFelipeClaudio/Preambulo.tex
@@ -125,11 +125,14 @@ Rio de Janeiro - RJ      CEP 21949-900\\
 \paragraph{}FFT - Fast Fourier Transform
 \paragraph{}IIR - Infinite Impulse Response
 \paragraph{}FIR - Finite Impulse Response
+\paragraph{}AR - Autoregressive
+\paragraph{}ARIMA - Autoregressive Integrated Moving Average
 \paragraph{}GARCH - Genralized Auto-Regressive Conditional Heteroscedasticity
 \paragraph{}ACF - Autocorrelation Function
 \paragraph{}PACF - Partial Autocorrelation Function
 \paragraph{}AIC - Akaike Info Criterion
 \paragraph{}PSF - Partial Sequence-based Forecasting
+\paragraph{}RBFN - Radial Basis Function Network
 \pagebreak
 
 
