--- a/ProjetodeGraduacao/ProjetoFelipeClaudio/cap3.tex
+++ b/ProjetodeGraduacao/ProjetoFelipeClaudio/cap3.tex
@@ -1,9 +1,9 @@
-\paragraph{}O objetivo deste capitulo é trazer a fundamentação teórica das técnicas utilizadas neste trabalho. Em primeiro lugar será abordada a teoria, aplicações e dificuldades relacionadas às séries temporais. Logo após, serão apresentados os modelos de aprendizados de máquina utilizados como redes neurais MLP e LSTM.
+\paragraph{}O objetivo deste capitulo é trazer a fundamentação teórica das técnicas utilizadas neste trabalho. Em primeiro lugar será abordada a teoria, aplicações e dificuldades relacionadas às séries temporais. Logo após, serão apresentados os modelos de aprendizados de máquina utilizados como redes neurais MLP.
 
 \section{Séries Temporais}
-\paragraph{}Uma série temporal é composta por uma coleção de observações feitas de forma sequencial e dependente [citar Apostila STEMP]. Essa ordem da sequência é dada pelo tempo, o qual pode ser contínuo ou discreto. No primeiro caso, $T = {t : t_1 < t < t_2}$ e a série temporal é definida como $\{X(t) : t \in T\}$, já no segundo caso, $T = \{t_1, t_2, ... , t_n\}$ e a série temporal é definida como $\{X_t : t \in T\}$, onde X é a variável observada. Geralmente define-se o T para o caso discreto como $T = \{1, 2, ..., n\}$ para o caso discreto por questões de simplicidade. Neste trabalho será utilizado o caso discreto, dado que a amostragem do sinal tem periodicidade mensal. Sendo assim, os exemplos dados no trabalho serão discretos também.
+\paragraph{}Uma série temporal é composta por uma coleção de observações feitas de forma sequencial e dependente \cite{sTemp}. Essa ordem da sequência é dada pelo tempo, o qual pode ser contínuo ou discreto. No primeiro caso, $T = {t : t_1 < t < t_2}$ e a série temporal é definida como $\{X(t) : t \in T\}$, já no segundo caso, $T = \{t_1, t_2, ... , t_n\}$ e a série temporal é definida como $\{X_t : t \in T\}$, onde X é a variável observada. Geralmente define-se o T para o caso discreto como $T = \{1, 2, ..., n\}$ por questões de simplicidade. Neste trabalho será utilizado o caso discreto, dado que a amostragem do sinal tem periodicidade mensal. Sendo assim, os exemplos dados no trabalho serão discretos também.
 
-\paragraph{}Assim como o tempo, os valores da variável $X_t$ podem ser contínuos ou discretos de acordo com o fenômeno que se observa. Alguns exemplos de fenômenos temporais com valores contínuos são a temperatura em um determinada região, volume de água em uma bacia hidrográfica e o peso de um indivíduo. Já como exemplo de fenômenos temporais com valores discretos podem ser citados o número  viagens de avião, quantidade de nascimentos, de carros produzidos por uma montadora e etc. Todos esse casos estão relacionados com um período de observação próprio, podendo ser uma janela de meses, anos, até mesmo décadas de observações de uma determinada variável.
+\paragraph{}Assim como o tempo, os valores da variável $X_t$ podem ser contínuos ou discretos de acordo com o fenômeno que se observa. Alguns exemplos de fenômenos temporais com valores contínuos são a temperatura em um determinada região, volume de água em uma bacia hidrográfica e o peso de um indivíduo. Já como exemplo de fenômenos temporais com valores discretos podem ser citados o número  viagens de avião, quantidade de nascimentos, de carros produzidos por uma montadora etc. Todos esse casos estão relacionados com um período de observação próprio, podendo ser uma janela de meses, anos, até mesmo décadas de observações de uma determinada variável.
 
 \paragraph{}A análise de séries temporais pode ser feita com diferentes intuitos, sendo os mais comuns a predição de valores futuros com base no histórico já conhecido, o controle de um processo, a explicação e descrição de fenômenos \cite{sTemp}.
 
@@ -24,8 +24,6 @@
 	
 \end{figure}
 
-Falar sobre a estacionalidade utilizada?
-
 \paragraph{}Buscando tornar a análise das séries temporais mais simples, além de facilitar a extração de informações importantes de maneira gráfica, é comum decompor a série em outras mais simples. A decomposição utilizada será a seguinte, conforme visto em \cite{apostilaCaloba}:
 
 \begin{equation*}
@@ -43,7 +41,7 @@ tend_t = \alpha + \beta t + \epsilon_t
 
 \paragraph{}Onde $\alpha$ e $\beta$ são constantes a serem estimadas e $\epsilon_t$ denota um erro aleatório com média zero. Geralmente chama-se o termo $m_t = \alpha + \beta t$ de termo de tendência, mas alguns autores chamam o termo $\beta$ de tendência, já que $\beta = m_t - m_{t-1}$. Essa variável indica a inclinação da função durante o tempo.
 
-\paragraph{}A função utilizada na aproximação da tendência é pode ser escolhida de acordo com a série que está sendo analisada. Uma forma bastante comum é a utilização de uma função polinomial na extração de tendência.
+\paragraph{}A função utilizada na aproximação da tendência pode ser escolhida de acordo com a série que está sendo analisada. Uma forma bastante comum é a utilização de uma função polinomial na extração de tendência.
 
 \paragraph{}Na tendência polinomial \ref{eqTendPoli}, busca-se fazer uma extração boa o suficiente para obter-se ao final do processamento a componente residual estacionária com média zero. Para séries monotonicamente crescente ou decrescente, utilizar $p = 1$ (função linear)  ou $p = 2$ (função quadrática) geralmente é suficiente para a extração da tendência, porém caso a série seja mais complexa, pode ser necessário utilizar funções de ordem mais altas
 
@@ -51,7 +49,7 @@ tend_t = \alpha + \beta t + \epsilon_t
 tend_t = \epsilon_t + \sum_{n=0}^{p} \beta_n t^n
 \end{equation}
 
-\paragraph{}Alguns métodos de filtragem podem ser utilizado também na extração de tendência. É comum utilizar filtros lineares nessa tarefa. Esses são definidos pela seguinte equação:
+\paragraph{}Alguns métodos de filtragem podem ser utilizados também na extração de tendência. É comum utilizar filtros lineares nessa tarefa. Esses são definidos pela seguinte equação:
 
 \begin{equation}
 y_t = \sum_{j = -q}^{s} a_jx_{t+j}
@@ -63,7 +61,7 @@ y_t = \sum_{j = -q}^{s} a_jx_{t+j}
 y_t = \dfrac{1}{2q + 1} \sum_{j = -q}^{q} x_{t + j}
 \end{equation}
 
-\paragraph{}O resultado do filtro acima é não-causal, o que impede que o processamento seja realizado em tempo real. Sendo assim, uma outra abordagem possível é fazer um deslocamento no filtro para que sejam utilizadas somente amostras do passado, conforme a equação a seguir:
+\paragraph{}O resultado do filtro acima é não-causal, o que impede que o processamento seja utilizado para a previsão de séries. Sendo assim, uma outra abordagem possível é fazer um deslocamento no filtro para que sejam utilizadas somente amostras do passado, conforme a equação a seguir:
 
 \begin{equation}
 	y_t =  \dfrac{1}{2q + 1} \sum_{j = -2q}^{0} x_{t+j}
@@ -84,7 +82,7 @@ y_t = \sum_{j=0}^{\infty} \alpha (1 - \alpha)^j x_{t-j}
 				
 				\includegraphics[width=\textwidth]{exemplo2_tendencia.jpg}
 				
-				\caption[\small{Exemplo de extração de tendência com filtro de média\cite{birthNY} }]{\label{bNYtend} \small{Exemplo de extração de tendência com filtro de média. Fonte: Newton (1998). \cite{birthNY}}}
+				\caption[\small{Exemplo de extração de tendência com filtro de média \cite{birthNY} }]{\label{bNYtend} \small{Exemplo de extração de tendência com filtro de média. Fonte: Newton (1998). \cite{birthNY}}}
 				
 			\end{center}	
 		}
@@ -101,7 +99,7 @@ y_t = x_t - x_{t-1} = \nabla x_t
 
 
 \subsection{Sazonalidade}
-\paragraph{}É comum encontrar nas séries observadas alguns padrões que se repetem periodicamente. Esse efeito é denominado sazonalidade e deve ser removido para que se obtenha ao final do processamento uma série residual estacionária\cite{apostilaCaloba}.
+\paragraph{}É comum encontrar nas séries observadas alguns padrões que se repetem periodicamente. Esse efeito é denominado sazonalidade e deve ser removido para que se obtenha ao final do processamento uma série residual estacionária \cite{apostilaCaloba}.
 
 \paragraph{}Segundo \cite{apostilaCaloba}, a sazonalidade pode ser determinada pela seguinte fórmula:
 
@@ -220,15 +218,13 @@ cs_t = a \cdot \cos(2\pi f t) + b \cdot \sin(2 \pi f t)
 
 
 \section{Processamento de Sinais}
-\paragraph{}Para remover os ciclos senoidais do espectrograma visto em [citar figura do espectrograma] é necessário realizar algum tipo de filtragem sobre sinal.
-
-\paragraph{}Uma das formas de se classificar um filtro é pela sua resposta em frequência, sendo as mais comuns: passa-baixa, passa-alta, passa-banda e rejeita-banda, assim como visto na figura abaixo.
+\paragraph{}Para remover os ciclos senoidais do espectrograma visto em \ref{bNYres} é necessário realizar algum tipo de filtragem sobre sinal. Uma das formas de se classificar um filtro é pela sua resposta em frequência, sendo as mais comuns: passa-baixa, passa-alta, passa-banda e rejeita-banda.
 
 \paragraph{}No problema de remoção de ciclos senoidais, busca-se um filtro que remova somente a frequência com maior magnitude, sem afetar muito as magnitudes das outras frequências presentes no espectrograma. Para isso procura-se um filtro que seja rejeita-banda com a banda de rejeição bem estreita e banda de passagem aproximadamente plana.
 
-\paragraph{}Um filtro bastante conhecido na literatura que atende a esse critério é o Notch, o qual a função de transferência é dada pela seguinte fórmula. A escolha pela versão IIRs se dá pela possibilidade de obter atenuações maiores e banda de rejeição mais estreita para um mesma ordem $N$ quando comparado com os filtros FIRs. A função de transferência do filtro Notch de segunda ordem se dá pela equação a seguir: \cite{introSP}:
+\paragraph{}Um filtro bastante conhecido na literatura que atende a esse critério é o Notch. A escolha pela versão IIRs se dá pela possibilidade de obter atenuações maiores e banda de rejeição mais estreita para um mesma ordem $N$ quando comparado com os filtros FIRs. A função de transferência do filtro Notch de segunda ordem se dá pela equação a seguir: \cite{introSP}:
 
-\begin{equation}
+\begin{equation} \label{notch}
 H(z) = b \cdot \frac{1 - 2\cos \omega_0 z^{-1} + z^{-2}}{1 - 2b\cos \omega_0 z^{-1} + (2b - 1) z^{-2}}
 \end{equation}
 
@@ -279,7 +275,7 @@ b = \frac{1}{ 1 + \beta} = \frac{1}{1 + \frac{\sqrt{1 - G_b²}}{G_b} \tan(\frac{\
 \begin{itemize}
 	\item {\textbf{Dendritos: } São responsáveis por receber estímulos elétricos de outros neurônios}
 	\item {\textbf{Corpo celular: } Processa as informações recebidas pelos dendritos e determina se será disparado um impulso elétrico}
-	\item {\textbf{Axônio: } Transmite o impulso elétrico, e, através das sinapses, envia a informação para outros neurônios. Isto ocorre sem contato entre os neurônios}
+	\item {\textbf{Axônio: } Transmite o impulso elétrico, e, através das sinapses, envia a informação para outros neurônios. Isto ocorre sem contato entre os mesmos.}
 \end{itemize}
 
 \paragraph{}A representação matemática desse modelo é dada pela seguinte estrutura:
@@ -426,10 +422,10 @@ u = \sum_{i = 0}^{n} w_i \cdot x_i
 \subsection{Rede perceptron multicamadas - MLP}
 \paragraph{}Assim como no cérebro, os neurônios artificiais podem ser agrupados em estrutura mais complexas. Para uma camada inicial com N entradas têm se na J-ésima saída:
 \begin{equation}
-Y^{(1)} = g(\sum_{i = 0}^{N} W_{ji}^{(1)} \cdot X_i)
+Y_{j}^{(1)} = g(\sum_{i = 0}^{N} W_{ji}^{(1)} \cdot X_i)
 \end{equation}
 
-\paragraph{}Nas camadas seguintes utiliza-se a saída da camada anterior (a qual tem $M$ saídas) como entrada na camada atual. Na fórmula busca-se obter a saída para o $P$-ésimo neurônio da camada $H$. 
+\paragraph{}Nas camadas seguintes utiliza-se a saída da camada anterior (com $M$ neurônios) como entrada na camada atual. Na fórmula busca-se obter a saída para o $P$-ésimo neurônio da camada $H$. 
 \begin{equation}
 Y_{P}^{(H)} = g(\sum_{i = 0}^{M} W_{pi}^{(H)} \cdot Y_{i}^{(H-1)})
 \end{equation}
