--- a/ProjetodeGraduacao/ProjetoFelipeClaudio/Preambulo.tex
+++ b/ProjetodeGraduacao/ProjetoFelipeClaudio/Preambulo.tex
@@ -133,6 +133,7 @@ Rio de Janeiro - RJ      CEP 21949-900\\
 \paragraph{}AIC - Akaike Info Criterion
 \paragraph{}PSF - Partial Sequence-based Forecasting
 \paragraph{}RBFN - Radial Basis Function Network
+\paragraph{}CSV - Comma Separated Values
 \pagebreak
 
 
