--- a/ProjetodeGraduacao/ProjetoFelipeClaudio/Principal.tex
+++ b/ProjetodeGraduacao/ProjetoFelipeClaudio/Principal.tex
@@ -55,6 +55,13 @@
 
 
 % ---------------------------------------------------------------
+% Chapter 4 - Método
+% ---------------------------------------------------------------
+\chapter{Método}
+\label{cap4}
+\input{cap4}
+
+% ---------------------------------------------------------------
 % Chapter 6 - Conclusões
 % ---------------------------------------------------------------
 \chapter{Conclusões}
