--- a/ProjetodeGraduacao/ProjetoFelipeClaudio/biblio.bib
+++ b/ProjetodeGraduacao/ProjetoFelipeClaudio/biblio.bib
@@ -575,3 +575,10 @@
 	keywords = "Electric load forecasting, Electricity price forecasting, Wind power forecasting, Solar power forecasting, Probabilistic forecasting, Forecasting competition",
 	abstract = "The energy industry has been going through a significant modernization process over the last decade. Its infrastructure is being upgraded rapidly. The supply, demand and prices are becoming more volatile and less predictable than ever before. Even its business model is being challenged fundamentally. In this competitive and dynamic environment, many decision-making processes rely on probabilistic forecasts to quantify the uncertain future. Although most of the papers in the energy forecasting literature focus on point or single-valued forecasts, the research interest in probabilistic energy forecasting research has taken off rapidly in recent years. In this paper, we summarize the recent research progress on probabilistic energy forecasting. A major portion of the paper is devoted to introducing the Global Energy Forecasting Competition 2014 (GEFCom2014), a probabilistic energy forecasting competition with four tracks on load, price, wind and solar forecasting, which attracted 581 participants from 61 countries. We conclude the paper with 12 predictions for the next decade of energy forecasting."
 }
+@MISC{
+	minMaxScaler,
+	TITLE = "sklearn.preprocessing.MinMaxScaler",
+	AUTHOR = "Scikit Learn",
+	HOWPUBLISHED = "https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.MinMaxScaler.html",
+	YEAR= "2019"
+}
