Added more subsections to chapter 5

--- a/ProjetodeGraduacao/ProjetoFelipeClaudio/Preambulo.tex
+++ b/ProjetodeGraduacao/ProjetoFelipeClaudio/Preambulo.tex
@@ -134,6 +134,9 @@ Rio de Janeiro - RJ      CEP 21949-900\\
 \paragraph{}PSF - Partial Sequence-based Forecasting
 \paragraph{}RBFN - Radial Basis Function Network
 \paragraph{}CSV - Comma Separated Values
+\paragraph{}MSE - Mean Squared Error
+\paragraph{}RMSE - Root Mean Squared Error
+\paragraph{}ACC - Accuracy
 \pagebreak
 
 
