--- a/ProjetodeGraduacao/ProjetoFelipeClaudio/Principal.tex
+++ b/ProjetodeGraduacao/ProjetoFelipeClaudio/Principal.tex
@@ -62,6 +62,13 @@
 \input{cap4}
 
 % ---------------------------------------------------------------
+% Chapter 5 - Resultados
+% ---------------------------------------------------------------
+\chapter{Resultados}
+\label{cap5}
+\input{cap5}
+
+% ---------------------------------------------------------------
 % Chapter 6 - Conclusões
 % ---------------------------------------------------------------
 \chapter{Conclusões}
