Added senoida cycles subsection to chapter 5

--- a/ProjetodeGraduacao/ProjetoFelipeClaudio/TesePack.tex
+++ b/ProjetodeGraduacao/ProjetoFelipeClaudio/TesePack.tex
@@ -29,6 +29,7 @@
 \usepackage{array}
 \usepackage{makecell}
 \usepackage{siunitx}
+\usepackage{multido}
 
 \renewcommand\theadalign{bc}
 \renewcommand\theadfont{\bfseries}
