Finalização dos processamentos

--- a/ProjetodeGraduacao/ProjetoFelipeClaudio/biblio.bib
+++ b/ProjetodeGraduacao/ProjetoFelipeClaudio/biblio.bib
@@ -582,3 +582,18 @@
 	HOWPUBLISHED = "https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.MinMaxScaler.html",
 	YEAR= "2019"
 }
+
+@article{
+	adadelta,
+	author    = {Matthew D. Zeiler},
+	title     = {{ADADELTA:} An Adaptive Learning Rate Method},
+	journal   = {CoRR},
+	volume    = {abs/1212.5701},
+	year      = {2012},
+	url       = {http://arxiv.org/abs/1212.5701},
+	archivePrefix = {arXiv},
+	eprint    = {1212.5701},
+	timestamp = {Mon, 13 Aug 2018 16:45:57 +0200},
+	biburl    = {https://dblp.org/rec/bib/journals/corr/abs-1212-5701},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
+}
